<resources>
    <string name="app_name">JUST DO IT</string>

    <string name="loginButton">Login</string>
    <string name="inputUsername">USERNAME</string>
    <string name="inputPassword">PASSWORD</string>
    <string name="rememberMe">Remember Me</string>
    <string name="forgot">Forgot</string>
    <string name="signUp">Sign Up</string>
    <string name="noOfAttempt">No of Incorrect Attempt :</string>
    <string name="url_server">https://findfun.000webhostapp.com/api/</string>
    <string name="url_user_read">user/read.php</string>
    <string name="url_user_read_one">user/read_one.php</string>
    <string name="url_user_create">user/create.php</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="any">any</string>
    <string name="dot">dot</string>
    <string name="error_value_required">Field required to be filled in.</string>
    <string name ="timerPrefURL">timerpref/create.php</string>
    <string name="Use">Use</string>
    <string name="url_timerpref_read">timerpref/read.php</string>
    <string name="url_todolist_create">todolist/create.php</string>
    <string name="viewHistory">History</string>
    <string name="addToHist">Add</string>
    <string name="ToDoName">ToDo Name</string>
    <string name="dateCreated">Date Created</string>
    <string name="url_todolist_read_one">todolist/read_one.php</string>
    <string name="url_todolist_read">todolist/read.php</string>
    <string name="url_scheduleList_create">scheduleList/create.php</string>
    <string name="url_scheduleList_read">scheduleList/read.php</string>


</resources>
